Added gender selection

--- a/Echoes/Base.lproj/Main.storyboard
+++ b/Echoes/Base.lproj/Main.storyboard
@@ -309,7 +309,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Character Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ffg-ia-HDt" userLabel="Name Field">
-                                <rect key="frame" x="36" y="40" width="529" height="44"/>
+                                <rect key="frame" x="36" y="84" width="529" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="GXM-Ka-zYk"/>
                                 </constraints>
@@ -318,7 +318,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="words" keyboardAppearance="alert"/>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M9g-87-Wtv" userLabel="Class Picker" customClass="iCarousel">
-                                <rect key="frame" x="0.0" y="84" width="600" height="476"/>
+                                <rect key="frame" x="0.0" y="128" width="600" height="432"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g9g-5N-MCR" userLabel="Class Name Label">
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -346,6 +346,13 @@
                                     <outlet property="delegate" destination="qSY-Ot-GtE" id="uYe-Hi-mxY"/>
                                 </connections>
                             </view>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="En8-ha-hzX">
+                                <rect key="frame" x="35" y="133" width="529" height="29"/>
+                                <segments>
+                                    <segment title="Male"/>
+                                    <segment title="Female"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -353,7 +360,10 @@
                             <constraint firstItem="ffg-ia-HDt" firstAttribute="leading" secondItem="pJZ-K6-cQ3" secondAttribute="leadingMargin" constant="20" id="Kex-YT-rem"/>
                             <constraint firstItem="M9g-87-Wtv" firstAttribute="leading" secondItem="pJZ-K6-cQ3" secondAttribute="leading" id="LOH-R1-RlD"/>
                             <constraint firstItem="nMN-pO-Dx8" firstAttribute="top" secondItem="M9g-87-Wtv" secondAttribute="bottom" constant="40" id="MsP-Rm-5KW"/>
+                            <constraint firstItem="En8-ha-hzX" firstAttribute="top" secondItem="ffg-ia-HDt" secondAttribute="bottom" constant="5" id="N9x-Sa-a8d"/>
                             <constraint firstItem="ffg-ia-HDt" firstAttribute="top" secondItem="hN7-j2-aOH" secondAttribute="bottom" constant="20" id="TF4-Ei-NEy"/>
+                            <constraint firstAttribute="centerX" secondItem="En8-ha-hzX" secondAttribute="centerX" id="eTB-b7-nOU"/>
+                            <constraint firstItem="ffg-ia-HDt" firstAttribute="width" secondItem="En8-ha-hzX" secondAttribute="width" id="eoF-ma-GFm"/>
                             <constraint firstAttribute="centerX" secondItem="M9g-87-Wtv" secondAttribute="centerX" id="ftl-Hh-EqJ"/>
                             <constraint firstAttribute="centerX" secondItem="ffg-ia-HDt" secondAttribute="centerX" id="l9K-td-R8T"/>
                             <constraint firstItem="M9g-87-Wtv" firstAttribute="top" secondItem="ffg-ia-HDt" secondAttribute="bottom" id="yLx-fc-NiP"/>
@@ -376,6 +386,7 @@
                         <outlet property="classDescriptionLabel" destination="bWO-5p-wh5" id="572-Dt-xXp"/>
                         <outlet property="classNameLabel" destination="g9g-5N-MCR" id="bAr-zF-ioi"/>
                         <outlet property="classPicker" destination="M9g-87-Wtv" id="DgF-VY-8VY"/>
+                        <outlet property="genderSegmentedControl" destination="En8-ha-hzX" id="cqX-D8-1U7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IlI-va-4Oi" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -406,6 +417,6 @@
         <image name="heartIcon.png" width="150" height="150"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Bxp-pO-EeZ"/>
+        <segue reference="9Os-uu-hNJ"/>
     </inferredMetricsTieBreakers>
 </document>
