--- a/Echoes/Base.lproj/Main.storyboard
+++ b/Echoes/Base.lproj/Main.storyboard
@@ -299,7 +299,7 @@
         <!--Item View Controller-->
         <scene sceneID="MYS-zF-t3F">
             <objects>
-                <viewController title="Item View Controller" id="rat-Uo-uIn" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ItemViewController" title="Item View Controller" useStoryboardIdentifierAsRestorationIdentifier="YES" id="rat-Uo-uIn" customClass="LCKItemViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="JAY-ii-Xif"/>
                         <viewControllerLayoutGuide type="bottom" id="k9C-Ky-Ncj"/>
@@ -309,44 +309,44 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Item Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JPB-pK-g1L" userLabel="Item Name Label">
-                                <rect key="frame" x="0.0" y="20" width="600" height="20.5"/>
+                                <rect key="frame" x="0.0" y="25" width="600" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b4G-c9-AFd" userLabel="Name Separator Line">
-                                <rect key="frame" x="0.0" y="40" width="600" height="1"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="0.0" y="50.5" width="600" height="1"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="EJ6-G1-mIm"/>
                                 </constraints>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fFy-TS-wEj" userLabel="Item Image">
-                                <rect key="frame" x="0.0" y="41" width="600" height="100"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fFy-TS-wEj" userLabel="Item Image">
+                                <rect key="frame" x="0.0" y="61.5" width="600" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="wSq-gb-erG"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Action Text" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3er-uf-Vpe" userLabel="Action Label">
-                                <rect key="frame" x="16" y="151" width="568" height="20.5"/>
+                                <rect key="frame" x="26" y="176.5" width="548" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description Text" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oTE-yr-HDC" userLabel="Description Label">
-                                <rect key="frame" x="16" y="181" width="568" height="20.5"/>
+                                <rect key="frame" x="26" y="206.5" width="548" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flavor Text" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4qd-La-zrm" userLabel="Flavor Text Label">
-                                <rect key="frame" x="16" y="211" width="568" height="20.5"/>
+                                <rect key="frame" x="26" y="529" width="548" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Requirements Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lEb-UE-1FJ" userLabel="Requirements Label">
-                                <rect key="frame" x="16" y="569.5" width="568" height="20.5"/>
+                                <rect key="frame" x="26" y="569.5" width="548" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -354,15 +354,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="4qd-La-zrm" secondAttribute="trailing" id="004-nW-iJd"/>
-                            <constraint firstItem="oTE-yr-HDC" firstAttribute="leading" secondItem="JFu-mu-DH0" secondAttribute="leadingMargin" id="1LD-WM-xQw"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="4qd-La-zrm" secondAttribute="trailing" constant="10" id="004-nW-iJd"/>
+                            <constraint firstItem="oTE-yr-HDC" firstAttribute="leading" secondItem="JFu-mu-DH0" secondAttribute="leadingMargin" constant="10" id="1LD-WM-xQw"/>
                             <constraint firstAttribute="centerX" secondItem="3er-uf-Vpe" secondAttribute="centerX" id="4Ru-2m-5zI"/>
-                            <constraint firstItem="JPB-pK-g1L" firstAttribute="top" secondItem="JAY-ii-Xif" secondAttribute="bottom" id="8nM-7u-nkJ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="3er-uf-Vpe" secondAttribute="trailing" id="9oM-0B-MpJ"/>
-                            <constraint firstItem="fFy-TS-wEj" firstAttribute="top" secondItem="b4G-c9-AFd" secondAttribute="bottom" id="Cgy-if-Xo1"/>
-                            <constraint firstItem="oTE-yr-HDC" firstAttribute="width" secondItem="JFu-mu-DH0" secondAttribute="width" id="F02-GL-1ES"/>
+                            <constraint firstItem="JPB-pK-g1L" firstAttribute="top" secondItem="JAY-ii-Xif" secondAttribute="bottom" constant="5" id="8nM-7u-nkJ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="3er-uf-Vpe" secondAttribute="trailing" constant="10" id="9oM-0B-MpJ"/>
+                            <constraint firstItem="fFy-TS-wEj" firstAttribute="top" secondItem="b4G-c9-AFd" secondAttribute="bottom" constant="10" id="Cgy-if-Xo1"/>
                             <constraint firstAttribute="centerX" secondItem="4qd-La-zrm" secondAttribute="centerX" id="IbM-Nh-CEx"/>
-                            <constraint firstItem="lEb-UE-1FJ" firstAttribute="leading" secondItem="JFu-mu-DH0" secondAttribute="leadingMargin" id="JuB-W4-9mG"/>
+                            <constraint firstItem="lEb-UE-1FJ" firstAttribute="leading" secondItem="JFu-mu-DH0" secondAttribute="leadingMargin" constant="10" id="JuB-W4-9mG"/>
                             <constraint firstItem="oTE-yr-HDC" firstAttribute="top" secondItem="3er-uf-Vpe" secondAttribute="bottom" constant="10" id="KZg-bW-Y8O"/>
                             <constraint firstItem="4qd-La-zrm" firstAttribute="width" secondItem="JFu-mu-DH0" secondAttribute="width" id="LK1-to-MDr"/>
                             <constraint firstItem="lEb-UE-1FJ" firstAttribute="width" secondItem="JFu-mu-DH0" secondAttribute="width" id="M3l-Jq-hmZ"/>
@@ -370,27 +369,36 @@
                             <constraint firstItem="JPB-pK-g1L" firstAttribute="width" secondItem="JFu-mu-DH0" secondAttribute="width" id="NNK-ig-djK"/>
                             <constraint firstAttribute="centerX" secondItem="lEb-UE-1FJ" secondAttribute="centerX" id="OeV-qC-hGX"/>
                             <constraint firstAttribute="width" secondItem="fFy-TS-wEj" secondAttribute="width" id="QqS-es-quA"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="lEb-UE-1FJ" secondAttribute="trailing" id="SHX-RR-Md3"/>
-                            <constraint firstItem="4qd-La-zrm" firstAttribute="top" secondItem="oTE-yr-HDC" secondAttribute="bottom" constant="10" id="UZO-YB-l6M"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="lEb-UE-1FJ" secondAttribute="trailing" constant="10" id="SHX-RR-Md3"/>
+                            <constraint firstItem="lEb-UE-1FJ" firstAttribute="top" secondItem="4qd-La-zrm" secondAttribute="bottom" constant="20" id="Tdv-9F-tn2"/>
+                            <constraint firstItem="4qd-La-zrm" firstAttribute="top" secondItem="oTE-yr-HDC" secondAttribute="bottom" constant="20" id="UZO-YB-l6M"/>
                             <constraint firstAttribute="centerX" secondItem="oTE-yr-HDC" secondAttribute="centerX" id="b2N-6m-x3Z"/>
                             <constraint firstItem="k9C-Ky-Ncj" firstAttribute="top" secondItem="lEb-UE-1FJ" secondAttribute="bottom" constant="10" id="cZJ-Of-Req"/>
                             <constraint firstItem="b4G-c9-AFd" firstAttribute="width" secondItem="JPB-pK-g1L" secondAttribute="width" id="dQ3-fy-VeI"/>
-                            <constraint firstItem="4qd-La-zrm" firstAttribute="leading" secondItem="JFu-mu-DH0" secondAttribute="leadingMargin" id="db5-5R-fgK"/>
+                            <constraint firstItem="4qd-La-zrm" firstAttribute="leading" secondItem="JFu-mu-DH0" secondAttribute="leadingMargin" constant="10" id="db5-5R-fgK"/>
                             <constraint firstAttribute="centerX" secondItem="b4G-c9-AFd" secondAttribute="centerX" id="ggu-o6-0lU"/>
                             <constraint firstAttribute="centerX" secondItem="JPB-pK-g1L" secondAttribute="centerX" id="jqf-po-fuW"/>
-                            <constraint firstItem="b4G-c9-AFd" firstAttribute="top" secondItem="JPB-pK-g1L" secondAttribute="bottom" id="ky5-jD-cFu"/>
-                            <constraint firstItem="3er-uf-Vpe" firstAttribute="leading" secondItem="JFu-mu-DH0" secondAttribute="leadingMargin" id="oal-pC-pKf"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="oTE-yr-HDC" secondAttribute="trailing" id="usn-vy-O2N"/>
-                            <constraint firstItem="3er-uf-Vpe" firstAttribute="top" secondItem="fFy-TS-wEj" secondAttribute="bottom" constant="10" id="yKY-mm-Kga"/>
+                            <constraint firstItem="b4G-c9-AFd" firstAttribute="top" secondItem="JPB-pK-g1L" secondAttribute="bottom" constant="5" id="ky5-jD-cFu"/>
+                            <constraint firstItem="3er-uf-Vpe" firstAttribute="leading" secondItem="JFu-mu-DH0" secondAttribute="leadingMargin" constant="10" id="oal-pC-pKf"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="oTE-yr-HDC" secondAttribute="trailing" constant="10" id="usn-vy-O2N"/>
+                            <constraint firstItem="3er-uf-Vpe" firstAttribute="top" secondItem="fFy-TS-wEj" secondAttribute="bottom" constant="15" id="yKY-mm-Kga"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="F02-GL-1ES"/>
                                 <exclude reference="LK1-to-MDr"/>
+                                <exclude reference="UZO-YB-l6M"/>
                                 <exclude reference="M3l-Jq-hmZ"/>
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="itemActionLabel" destination="3er-uf-Vpe" id="YCn-2T-K0A"/>
+                        <outlet property="itemDescriptionLabel" destination="oTE-yr-HDC" id="eFU-qP-9WX"/>
+                        <outlet property="itemFlavorTextLabel" destination="4qd-La-zrm" id="0dh-Ci-bfM"/>
+                        <outlet property="itemImageView" destination="fFy-TS-wEj" id="cC6-MF-zCY"/>
+                        <outlet property="itemNameLabel" destination="JPB-pK-g1L" id="Lz1-ou-SqL"/>
+                        <outlet property="itemRequirementsLabel" destination="lEb-UE-1FJ" id="7bF-vg-j7W"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2uF-GI-kgL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
